# universal-cmd-util

./: README.md  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  dictionary.db  tauri.conf.json
src-tauri/src/: dictionary_module.rs
