[package]
name = "universal-cmd-util"
version = "0.0.1"
description = "Universal Command Line Utitity"
authors = ["Nipun Dilshan", "Samintha Kaveesh"]
license = ""
repository = "https://github.com/skaveesh/universal-cmd-util.git"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.trim-in-place]
version = "0.1.5"
[dev-dependencies.slash-formatter]
version = "3.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
